[project]
name = "symbion-latp"
version = "1.1.0"
description = "LUYS-ANTI-TOXIN PROTOCOL v1.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
